Revert "CB-8982 Indefinitely long loop when deleting environment. When we fetched the cluster definition, we checked the default templates but this step was unnecessary, because we should delete the user managed only."
This reverts commit 0cea0a7f0a7e1c98b410c9b4873128d878cc1178.